--- a/hackathons.html
+++ b/hackathons.html
@@ -90,6 +90,15 @@ td {
 <table>
 <tr>
 <td>
+    <a id="p2k19" href="images/hackathons/p2k19.gif">
+    <img src="images/hackathons/p2k19-s.gif" alt="p2k19-s"></a><br>
+    p2k19: ports hackathon<br>
+    Ноябрь 5 - 12, 2019<br>
+    Бухарест, Румыния<br>
+    18 разработчиков<br>
+    При финансировании <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    <br>
+<td>
     <a id="g2k19" href="images/hackathons/g2k19.gif">
     <img src="images/hackathons/g2k19-s.gif" alt="g2k19-s"></a><br>
     g2k19: general hackathon<br>
@@ -108,6 +117,7 @@ td {
     При финансировании <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     и поддержке Kevin Lo и <a href="http://www.funtoro.com">MSI/FUNTORO</a>
     <br>
+<tr>
 <td>
     <a id="a2k19" href="images/hackathons/a2k19.gif">
     <img src="images/hackathons/a2k19-s.gif" alt="a2k19-s"></a><br>
@@ -118,7 +128,6 @@ td {
     При поддержке <a href="https://www.victoria.ac.nz">Victoria University of Wellington</a>
     и <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
     <br>
-<tr>
 <td>
     <a id="l2k18" href="images/hackathons/l2k18.jpg">
     <img src="images/hackathons/l2k18-s.gif" alt="l2k18-s"></a><br>
@@ -138,6 +147,7 @@ td {
     При поддержке Univerzita Jana Evangelisty Purkyn&#283;,
     финансировании Oracle и
     <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="g2k18" href="images/hackathons/g2k18.gif">
     <img src="images/hackathons/g2k18-s.gif" alt="g2k18-s"></a><br>
@@ -147,7 +157,6 @@ td {
     39 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     и Mitja Mu&#382;eni&#269;.
-<tr>
 <td>
     <a id="p2k18" href="images/hackathons/p2k18.gif">
     <img src="images/hackathons/p2k18-s.gif" alt="p2k18-s"></a><br>
@@ -166,6 +175,7 @@ td {
     19 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     и <a href="http://www.otago.ac.nz">University of Otago</a>.
+<tr>
 <td>
     <a id="s2k17" href="images/hackathons/s2k17.gif">
     <img src="images/hackathons/s2k17-s.gif" alt="s2k17-s"></a><br>
@@ -175,7 +185,6 @@ td {
     10 разработчиков<br>
     При поддержке <a href="http://www.foretell.ca">ForeTell Technologies</a>
     и <a href="http://www.xplornet.ca">Xplornet</a>.
-<tr>
 <td>
     <a id="p2k17" href="images/hackathons/p2k17.gif">
     <img src="images/hackathons/p2k17-s.gif" alt="p2k17-s"></a><br>
@@ -195,6 +204,7 @@ td {
     38 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     и <a href="http://www.utoronto.ca">University of Toronto</a>.
+<tr>
 <td>
     <a id="d2k17" href="images/hackathons/d2k17.gif">
     <img src="images/hackathons/d2k17-s.gif" alt="d2k17-s"></a><br>
@@ -204,7 +214,6 @@ td {
     24 разработчика<br>
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     и <a href="http://www.genua.de">genua</a>.
-<tr>
 <td>
     <a id="noshirt" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -222,6 +231,7 @@ td {
     19 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     и David Gwynne.	
+<tr>
 <td>
     <br>
     <br>
@@ -243,7 +253,6 @@ td {
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     и оказанной помощи от <a href="http://www.enseeiht.fr">ENSEEIHT</a> и
     <a href="http://www.objectif-libre.com">Objectif Libre</a>.
-<tr>
 <td>
     <a id="b2k16" href="images/hackathons/b2k16.gif">
     <img src="images/hackathons/b2k16-s.gif" alt="b2k16-s"></a><br>
@@ -262,6 +271,7 @@ td {
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     with the help of
     <a href="http://www.cl.cam.ac.uk">Computer Laboratory, Cambridge</a>.
+<tr>
 <td>
     <a id="n2k16" href="images/hackathons/n2k16.gif">
     <img src="images/hackathons/n2k16-s.gif" alt="n2k16-s"></a><br>
@@ -272,7 +282,6 @@ td {
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and <a href="http://www.oracle.com">Oracle</a>, with the help of
     <a href="http://cuni.cz">Charles University</a>.
-<tr>
 <td>
     <a id="p2k16" href="images/hackathons/p2k16.gif">
     <img src="images/hackathons/p2k16-s.gif" alt="p2k16-s"></a><br>
@@ -291,6 +300,7 @@ td {
     19 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://esdenera.com">Esdenera Networks</a>.
+<tr>
 <td>
     <a id="u2k15" href="images/hackathons/u2k15.gif">
     <img src="images/hackathons/u2k15-s.gif" alt="u2k15-s"></a><br>
@@ -300,7 +310,6 @@ td {
     22 разработчика<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.in-berlin.de">IN-Berlin</a>.
-<tr>
 <td>
     <a id="l2k15" href="images/hackathons/l2k15.gif">
     <img src="images/hackathons/l2k15-s.gif" alt="l2k15-s"></a><br>
@@ -318,6 +327,7 @@ td {
     п. Насу, Тотиги, Япония<br>
     6 разработчиков<br>
     With the support of <a href="http://www.iij-ii.co.jp/en/">IIJ innovation institute</a>.
+<tr>
 <td>
     <a id="c2k15" href="images/hackathons/c2k15.gif">
     <img src="images/hackathons/c2k15-s.gif" alt="c2k15-s"></a><br>
@@ -327,7 +337,6 @@ td {
     45 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://sait.ca">SAIT</a>.
-<tr>
 <td>
     <a id="p2k15" href="images/hackathons/p2k15.gif">
     <img src="images/hackathons/p2k15-s.gif" alt="p2k15-s"></a><br>
@@ -346,6 +355,7 @@ td {
     21 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of David Gwynne.
+<tr>
 <td>
     <a id="g2k14" href="images/hackathons/g2k14.gif">
     <img src="images/hackathons/g2k14-s.gif" alt="g2k14-s"></a><br>
@@ -355,7 +365,6 @@ td {
     49 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of Mitja Mu&#382;eni&#269;.
-<tr>
 <td>
     <a id="m2k14" href="images/hackathons/m2k14.gif">
     <img src="images/hackathons/m2k14-s.gif" alt="m2k14-s"></a><br>
@@ -374,6 +383,7 @@ td {
     15 разработчиков<br>
     При финансировании <a href="http://www.foretell.ca">ForeTell Technologies</a>
     и поддержке <a href="http://www.otago.ac.nz">University of Otago</a>.
+<tr>
 <td>
     <a id="b2k13" href="images/hackathons/b2k13.gif">
     <img src="images/hackathons/b2k13-s.gif" alt="b2k13-s"></a><br>
@@ -383,7 +393,6 @@ td {
     21 разработчик<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.in-berlin.de">IN-Berlin</a>.
-<tr>
 <td>
     <a id="t2k13" href="images/hackathons/t2k13.jpg">
     <img src="images/hackathons/t2k13-s.gif" alt="t2k13-s"></a><br>
@@ -402,6 +411,7 @@ td {
     17 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.otago.ac.nz">University of Otago</a>.
+<tr>
 <td>
     <a id="c2k12" href="images/hackathons/c2k12.gif">
     <img src="images/hackathons/c2k12-s.gif" alt="c2k12-s"></a><br>
@@ -411,7 +421,6 @@ td {
     10 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.uc.pt">University of Coimbra</a>.
-<tr>
 <td>
     <a id="p2k12" href="images/hackathons/p2k12.gif">
     <img src="images/hackathons/p2k12-s.gif" alt="p2k12-s"></a><br>
@@ -429,6 +438,7 @@ td {
     Штарнберг, Германия<br>
     23 разработчика<br>
     Funded by <a href="http://www.genua.de">genua</a>.
+<tr>
 <td>
     <a id="g2k12" href="images/hackathons/g2k12.gif">
     <img src="images/hackathons/g2k12-s.gif" alt="g2k12-s"></a><br>
@@ -437,7 +447,6 @@ td {
     Будапешт, Венгрия<br>
     41 разработчик<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="r2k12" href="images/hackathons/r2k12.gif">
     <img src="images/hackathons/r2k12-s.gif" alt="r2k12-s"></a><br>
@@ -457,6 +466,7 @@ td {
     15 разработчиков<br>
     Funded by <a href="https://www.openbsd.org/donations.html">donations to
     the OpenBSD Project</a>.
+<tr>
 <td>
     <a id="a2k11" href="images/hackathons/a2k11.gif">
     <img src="images/hackathons/a2k11-s.gif" alt="a2k11-s"></a><br>
@@ -466,7 +476,6 @@ td {
     8 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     и <a href="http://www.uc.pt">University of Coimbra</a>.
-<tr>
 <td>
     <a id="s2k11" href="images/hackathons/s2k11.jpg">
     <img src="images/hackathons/s2k11-s.gif" alt="s2k11-s"></a><br>
@@ -484,6 +493,7 @@ td {
     Эдмонтон, Альберта, Канада<br>
     36 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="k2k11" href="images/hackathons/k2k11.jpg">
     <img src="images/hackathons/k2k11-s.gif" alt="k2k11-s"></a><br>
@@ -492,7 +502,6 @@ td {
     Hafnarfjordur, Iceland<br>
     15 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="p2k10" href="images/hackathons/p2k10.gif">
     <img src="images/hackathons/p2k10-s.gif" alt="p2k10-s"></a><br>
@@ -509,6 +518,7 @@ td {
     Сентябрь 19 - 25, 2010<br>
     Akiyamago, Sakae Mura, Nagano, Japan<br>
     19 разработчиков<br>
+<tr>
 <td>
     <a id="c2k10" href="images/hackathons/c2k10.gif">
     <img src="images/hackathons/c2k10-s.gif" alt="c2k10-s"></a><br>
@@ -518,7 +528,6 @@ td {
     46 разработчиков<br>
     При поддержке
     <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
-<tr>
 <td>
     <br>
     <br>
@@ -545,6 +554,7 @@ td {
     Организован благодаря <a href="https://www.openbsd.org/donations.html">пожертвованиям
     в проект OpenBSD</a>
     и при поддержке <a href="http://www.uc.pt">University of Coimbra</a>.
+<tr>
 <td>
     <a id="p2k9" href="images/hackathons/p2k9.gif">
     <img src="images/hackathons/p2k9-s.gif" alt="p2k9-s"></a><br>
@@ -554,7 +564,6 @@ td {
     14 разоаботчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">пожертвованиям
     проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="f2k9" href="images/hackathons/f2k9.gif">
     <img src="images/hackathons/f2k9-s.gif" alt="f2k9-s"></a><br>
@@ -572,6 +581,7 @@ td {
     46 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">пожертвованиям
     проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="n2k9" href="images/hackathons/n2k9.gif">
     <img src="images/hackathons/n2k9-s.gif" alt="n2k9-s"></a><br>
@@ -579,7 +589,6 @@ td {
     Январь 26 - 30, 2009<br>
     Базель, Швейцария<br>
     19 разработчиков<br>
-<tr>
 <td>
     <a id="h2k8" href="images/hackathons/h2k8.gif">
     <img src="images/hackathons/h2k8-s.gif" alt="h2k8-s"></a><br>
@@ -599,6 +608,7 @@ td {
     13 разработчиков<br>
     Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
+<tr>
 <td>
     <a id="c2k8" href="images/hackathons/c2k8.gif">
     <img src="images/hackathons/c2k8-s.gif" alt="c2k8-s"></a><br>
@@ -607,7 +617,6 @@ td {
     Эдмонтон, Аьберта<br>
     55 разработчиков<br>
     Организован <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="n2k8" href="images/hackathons/n2k8.gif">
     <img src="images/hackathons/n2k8-s.gif" alt="n2k8-s"></a><br>
@@ -627,6 +636,7 @@ td {
     Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>,
     а также при поддержке <a href="http://www.uc.pt">University of Coimbra</a>.
+<tr>
 <td>
     <a id="p2k7" href="images/hackathons/p2k7.gif">
     <img src="images/hackathons/p2k7-s.gif" alt="p2k7-s"></a><br>
@@ -636,7 +646,6 @@ td {
     13 разработчиков<br>
     Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
-<tr>
 <td>
     <a id="c2k7" href="images/hackathons/c2k7.gif">
     <img src="images/hackathons/c2k7-s.gif" alt="c2k7-s"></a><br>
@@ -655,6 +664,7 @@ td {
     14 разработчиков<br>
     Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
+<tr>
 <td>
     <a id="h2k6" href="images/hackathons/h2k6.gif">
     <img src="images/hackathons/h2k6-s.gif" alt="h2k6-s"></a><br>
@@ -665,7 +675,6 @@ td {
     Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>,
     а также при поддержке <a href="http://www.uc.pt">University of Coimbra</a>.
-<tr>
 <td>
     <a id="p2k6" href="images/hackathons/p2k6.gif">
     <img src="images/hackathons/p2k6-s.gif" alt="p2k6-s"></a><br>
@@ -682,6 +691,7 @@ td {
     Август 28 - Sep 1, 2006<br>
     Замок Kransberg, Германия<br>
     14 разработчиков<br>
+<tr>
 <td>
     <a id="r2k6" href="images/hackathons/r2k6.gif">
     <img src="images/hackathons/r2k6-s.gif" alt="r2k6-s"></a><br>
@@ -690,7 +700,6 @@ td {
     Гамбург, Германия<br>
     6 разработчиков<br>
     При поддержке Henning Brauer.
-<tr>
 <td>
     <a id="c2k6" href="images/hackathons/c2k6.gif">
     <img src="images/hackathons/c2k6-s.gif" alt="c2k6-s"></a><br>
@@ -709,6 +718,7 @@ td {
     12 разработчиков<br>
     Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
+<tr>
 <td>
     <a id="c2k5" href="images/hackathons/c2k5.gif">
     <img src="images/hackathons/c2k5-s.gif" alt="c2k5-s"></a><br>
@@ -718,7 +728,6 @@ td {
     60 разработчиков<br>
     Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
-<tr>
 <td>
     <a id="c2k4" href="images/hackathons/c2k4.gif">
     <img src="images/hackathons/c2k4-s.gif" alt="c2k4-s"></a><br>
@@ -736,6 +745,7 @@ td {
     Сишелт, Британская Колумбия<br>
     12 разработчиков<br>
     При поддержке Ryan McBride.
+<tr>
 <td>
     <a id="c2k3" href="images/hackathons/c2k3.gif">
     <img src="images/hackathons/c2k3-s.gif" alt="c2k3-s"></a><br>
@@ -745,7 +755,6 @@ td {
     51 разработчик<br>
     Основан <a href="https://www.nlnetlabs.nl">NLnet</a>
     (после того, как DARPA прекратила оказывать поддержку).
-<tr>
 <td>
     <a id="c2k2" href="images/hackathons/c2k2.gif">
     <img src="images/hackathons/c2k2-s.gif" alt="c2k2-s"></a><br>
@@ -761,6 +770,7 @@ td {
     Август 17 - 20, 2001<br>
     Вашингтон, округ Колумбия
     Организован DARPA при поддержке <a href="http://www.usenix.org">USENIX</a>.
+<tr>
 <td>
     <a id="c2k1" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -769,7 +779,6 @@ td {
     Кембридж, Массачусетс<br>    
     25 разработчиков<br>
     Организован DARPA при поддержке <a href="http://www.mit.edu">MIT</a>.
-<tr>
 <td>
     <a id="c2k" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -796,7 +805,7 @@ pf2k4, c2k4, and c2k5 созданы David Woloschuk.<br>
 n2k10 создана Theo de Raadt, усовершенствована Ty Semaka.<br>
 c2k10, j2k10, and p2k10 создана Damon Mlekuz.<br>
 k2k11 создана Bret Lambert.<br>
-r2k12, g2k12, n2k12, b2k13, n2k14, m2k14, g2k14, s2k15, c2k15, l2k15, p2k16, g2k16, b2k16, a2k17, d2k17, p2k17, s2k17, a2k18, p2k18, g2k18, a2k19, t2k19 создана Markus Hall.<br>
+r2k12, g2k12, n2k12, b2k13, n2k14, m2k14, g2k14, s2k15, c2k15, l2k15, p2k16, g2k16, b2k16, a2k17, d2k17, p2k17, s2k17, a2k18, p2k18, g2k18, a2k19, t2k19, g2k19, e2k19 создана Markus Hall.<br>
 p2k12 создана Bidon Mickael aka Mogmi.<br>
 c2k12 создана Theo de Raadt.<br>
 n2k13 купленная футболка с добавленной надписью.<br>
