[1.143] remove EN article(s) - hackathons.html

--- a/hackathons.html
+++ b/hackathons.html
@@ -96,7 +96,7 @@ td {
     Ноябрь 5 - 12, 2019<br>
     Бухарест, Румыния<br>
     18 разработчиков<br>
-    При финансировании <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
 <td>
     <a id="g2k19" href="images/hackathons/g2k19.gif">
@@ -105,7 +105,7 @@ td {
     Май 7 - 14, 2019<br>
     Оттава, Канада<br>
     43 разработчика<br>
-    При финансировании <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
 <td>
     <a id="t2k19" href="images/hackathons/t2k19.gif">
@@ -114,7 +114,7 @@ td {
     Март 28 - Апрель 5, 2019<br>
     Тайбэй, Тайвань<br>
     16 разработчиков<br>
-    При финансировании <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Kevin Lo и <a href="http://www.funtoro.com">MSI/FUNTORO</a>
     <br>
 <tr>
@@ -126,7 +126,7 @@ td {
     Веллингтон, Новая Зеландия<br>
     18 разработчиков<br>
     При поддержке <a href="https://www.victoria.ac.nz">Victoria University of Wellington</a>
-    и <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    и <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
 <td>
     <a id="l2k18" href="images/hackathons/l2k18.jpg">
@@ -135,7 +135,7 @@ td {
     Ноябрь 3-11, 2018<br>
     Эдмонтон, Канада<br>
     5 разработчиков<br>
-    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
 <td>
     <a id="n2k18" href="images/hackathons/n2k18.gif">
@@ -146,7 +146,7 @@ td {
     11 разработчиков<br>
     При поддержке Univerzita Jana Evangelisty Purkyn&#283;,
     финансировании Oracle и
-    <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
 <tr>
 <td>
     <a id="g2k18" href="images/hackathons/g2k18.gif">
@@ -155,7 +155,7 @@ td {
     Июль 8-13, 2018<br>
     Любляна, Словения<br>
     39 разработчиков<br>
-    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и Mitja Mu&#382;eni&#269;.
 <td>
     <a id="p2k18" href="images/hackathons/p2k18.gif">
@@ -164,7 +164,7 @@ td {
     Апрель 23-29, 2018<br>
     Нант, Франция<br>
     24 разработчиков<br>
-    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.epitech.eu">Epitech Nantes</a>.
 <td>
     <a id="a2k18" href="images/hackathons/a2k18.gif">
@@ -173,7 +173,7 @@ td {
     Февраль 5-11, 2018<br>
     Данидин, Новая Зеландия<br>
     19 разработчиков<br>
-    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.otago.ac.nz">University of Otago</a>.
 <tr>
 <td>
@@ -192,7 +192,7 @@ td {
     Ноябрь 1 - 6, 2017<br>
     Берлин, Германия<br>
     23 разработчиков<br>
-    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.in-berlin.de">IN-Berlin</a> and
     <a href="http://www.hostserver.de/">Hostserver</a>.
 <td>
@@ -202,7 +202,7 @@ td {
     Август 9 - 15, 2017<br>
     Торонто, Канада<br>
     38 разработчиков<br>
-    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.utoronto.ca">University of Toronto</a>.
 <tr>
 <td>
@@ -212,7 +212,7 @@ td {
     Май 26 - 31, 2017<br>
     Штарнберг, Германия<br>
     24 разработчика<br>
-    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.genua.de">genua</a>.
 <td>
     <a id="noshirt" href="images/hackathons/noshirt-s.gif">
@@ -229,7 +229,7 @@ td {
     Январь 19 - 26, 2017<br>
     Брисбен, Австралия<br>
     19 разработчиков<br>
-    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и David Gwynne.	
 <tr>
 <td>
@@ -250,7 +250,7 @@ td {
     Ноябрь 2 - 6, 2016<br>
     Тулуза, Франция<br>
     9 разработчиков<br>
-    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и оказанной помощи от <a href="http://www.enseeiht.fr">ENSEEIHT</a> и
     <a href="http://www.objectif-libre.com">Objectif Libre</a>.
 <td>
@@ -260,7 +260,7 @@ td {
     Октябрь 31 - Nov 5, 2016<br>
     Будапешт, Венгрия<br>
     10 разработчиков<br>
-    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
 <td>
     <a id="g2k16" href="images/hackathons/g2k16.gif">
     <img src="images/hackathons/g2k16-s.gif" alt="g2k16-s"></a><br>
@@ -268,7 +268,7 @@ td {
     Август 30 - Sep 5, 2016<br>
     Кэмбридж, Великобритания<br>
     62 разработчика<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     with the help of
     <a href="http://www.cl.cam.ac.uk">Computer Laboratory, Cambridge</a>.
 <tr>
@@ -279,7 +279,7 @@ td {
     Июль 18 - 22, 2016<br>
     Прага, Чехия<br>
     18 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and <a href="http://www.oracle.com">Oracle</a>, with the help of
     <a href="http://cuni.cz">Charles University</a>.
 <td>
@@ -289,7 +289,7 @@ td {
     Апрель 25 - 29, 2016<br>
     Нант, Франция<br>
     22 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.epitech.eu">Epitech Nantes</a>.
 <td>
     <a id="n2k15" href="images/hackathons/n2k15.gif">
@@ -298,7 +298,7 @@ td {
     Декабрь 1 - 6, 2015<br>
     Ганновер, Германия<br>
     19 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://esdenera.com">Esdenera Networks</a>.
 <tr>
 <td>
@@ -308,7 +308,7 @@ td {
     Октябрь 22 - 27, 2015<br>
     Берлин, Германия<br>
     22 разработчика<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.in-berlin.de">IN-Berlin</a>.
 <td>
     <a id="l2k15" href="images/hackathons/l2k15.gif">
@@ -317,7 +317,7 @@ td {
     Сентябрь 8 - 13, 2015<br>
     <a href="http://foi.unizg.hr">Faculty of Organization and Informatics</a>, Vara&#382;din, Хорватия<br>
     17 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     with help of the <a href="http://foi.unizg.hr">Open Systems and Security Lab</a>.
 <td>
     <a id="j2k15" href="images/hackathons/j2k15.gif">
@@ -335,7 +335,7 @@ td {
     Июль 15 - 21, 2015<br>
     <a href="http://sait.ca">SAIT</a>, Calgary<br>
     45 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://sait.ca">SAIT</a>.
 <td>
     <a id="p2k15" href="images/hackathons/p2k15.gif">
@@ -344,7 +344,7 @@ td {
     Апрель 2 - 7, 2015<br>
     <a href="http://emps.exeter.ac.uk/">Эксетерский университет</a>, Великобритания<br>
     14 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of Andy Henderson.
 <td>
     <a id="s2k15" href="images/hackathons/s2k15.gif">
@@ -353,7 +353,7 @@ td {
     Февраль 6 - 13, 2015<br>
     Брисбен, Австралия<br>
     21 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of David Gwynne.
 <tr>
 <td>
@@ -363,7 +363,7 @@ td {
     Июль 8 - 14, 2014<br>
     Любляна, Словения<br>
     49 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of Mitja Mu&#382;eni&#269;.
 <td>
     <a id="m2k14" href="images/hackathons/m2k14.gif">
@@ -372,7 +372,7 @@ td {
     Apr 17 - 22, 2014<br>
     Марракеш, Марокко<br>
     12 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.uca.ma/">Universit&eacute; Cadi Ayyad</a>.
 <td>
     <a id="n2k14" href="images/hackathons/n2k14.gif">
@@ -391,7 +391,7 @@ td {
     Октябрь 17 - 21, 2013<br>
     Берлин, Германия<br>
     21 разработчик<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.in-berlin.de">IN-Berlin</a>.
 <td>
     <a id="t2k13" href="images/hackathons/t2k13.jpg">
@@ -400,7 +400,7 @@ td {
     May 29 - Jun 5, 2013<br>
     Торонто, Канада<br>
     43 разработчика<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.utoronto.ca">University of Toronto</a>.
 <td>
     <a id="n2k13" href="images/hackathons/n2k13.gif">
@@ -409,7 +409,7 @@ td {
     Январь 13 - 19, 2013<br>
     Данидин, Новая Зеландия<br>
     17 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.otago.ac.nz">University of Otago</a>.
 <tr>
 <td>
@@ -419,7 +419,7 @@ td {
     Ноябрь 14 - 20, 2012<br>
     Coimbra, Portugal<br>
     10 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.uc.pt">University of Coimbra</a>.
 <td>
     <a id="p2k12" href="images/hackathons/p2k12.gif">
@@ -446,7 +446,7 @@ td {
     Июль 7 - 14, 2012<br>
     Будапешт, Венгрия<br>
     41 разработчик<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
 <td>
     <a id="r2k12" href="images/hackathons/r2k12.gif">
     <img src="images/hackathons/r2k12-s.gif" alt="r2k12-s"></a><br>
@@ -454,7 +454,7 @@ td {
     Апрель 10 - 14, 2012<br>
     Париж, Франция<br>
     16 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and support of <a href="http://www.ihp.fr">Institute Henri Poincar&eacute;</a> and
     <a href="http://www.u-psud.fr">Paris-Sud University</a>.
 <td>
@@ -474,7 +474,7 @@ td {
     Ноябрь 5 - 12, 2011<br>
     Coimbra, Portugal<br>
     8 разработчиков<br>
-    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.uc.pt">University of Coimbra</a>.
 <td>
     <a id="s2k11" href="images/hackathons/s2k11.jpg">
@@ -483,7 +483,7 @@ td {
     Сентябрь 16 - 23, 2011<br>
     Ljubljana, Slovenia<br>
     25 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of Mitja Mu&#382;eni&#269;.
 <td>
     <a id="c2k11" href="images/hackathons/c2k11.gif">
@@ -492,7 +492,7 @@ td {
     Июль 2 - 9, 2011<br>
     Эдмонтон, Альберта, Канада<br>
     36 разработчиков<br>
-    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
 <tr>
 <td>
     <a id="k2k11" href="images/hackathons/k2k11.jpg">
@@ -501,7 +501,7 @@ td {
     Апрель 1 - 7, 2011<br>
     Hafnarfjordur, Iceland<br>
     15 разработчиков<br>
-    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
 <td>
     <a id="p2k10" href="images/hackathons/p2k10.gif">
     <img src="images/hackathons/p2k10-s.gif" alt="p2k10-s"></a><br>
@@ -527,7 +527,7 @@ td {
     Эдмонтон, Альберта<br>
     46 разработчиков<br>
     При поддержке
-    <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
 <td>
     <br>
     <br>
@@ -542,7 +542,7 @@ td {
     Январь 9 - 15, 2010<br>
     Melbourne, Australia<br>
     17 разработчиков<br>
-    При финансировании <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://vpac.org">Victorian Partnership for Advanced Computing</a>
 <td>
     <a id="h2k9" href="images/hackathons/h2k9.gif">
@@ -616,7 +616,7 @@ td {
     Июнь 6-15, 2008<br>
     Эдмонтон, Аьберта<br>
     55 разработчиков<br>
-    Организован <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    Организован <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
 <td>
     <a id="n2k8" href="images/hackathons/n2k8.gif">
     <img src="images/hackathons/n2k8-s.gif" alt="n2k8-s"></a><br>
