--- a/hackathons.html
+++ b/hackathons.html
@@ -551,8 +551,8 @@ td {
     Ноябрь 21 - 27, 2009<br>
     Coimbra, Португалия<br>
     15 разработчиков<br>
-    Организован благодаря <a href="https://www.openbsd.org/donations.html">пожертвованиям
-    в проект OpenBSD</a>
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">
+    пожертвованиям проекту OpenBSD</a>
     и при поддержке <a href="http://www.uc.pt">University of Coimbra</a>.
 <tr>
 <td>
@@ -562,8 +562,8 @@ td {
     Октябрь 9 - 16, 2009<br>
     Будапешт, Венгрия<br>
     14 разоаботчиков<br>
-    Организован благодаря <a href="https://www.openbsd.org/donations.html">пожертвованиям
-    проекту OpenBSD</a>.
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">
+    пожертвованиям проекту OpenBSD</a>.
 <td>
     <a id="f2k9" href="images/hackathons/f2k9.gif">
     <img src="images/hackathons/f2k9-s.gif" alt="f2k9-s"></a><br>
@@ -579,8 +579,8 @@ td {
     Май 30 - Jun 7, 2009<br>
     Эдмонтон, Альберта<br>
     46 разработчиков<br>
-    Организован благодаря <a href="https://www.openbsd.org/donations.html">пожертвованиям
-    проекту OpenBSD</a>.
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">
+    пожертвованиям проекту OpenBSD</a>.
 <tr>
 <td>
     <a id="n2k9" href="images/hackathons/n2k9.gif">
@@ -596,8 +596,8 @@ td {
     Ноябрь 20 - 27, 2008<br>
     Coimbra, Portugal<br>
     18 разработчиков<br>
-    Funded by <a href="https://www.openbsd.org/donations.html">donations to
-    the OpenBSD Project</a>
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">
+    пожертвованиям проекту OpenBSD</a>
     and with the support of <a href="http://www.uc.pt">University of Coimbra</a>.
 <td>
     <a id="p2k8" href="images/hackathons/p2k8.gif">
@@ -606,8 +606,8 @@ td {
     Октябрь 24 - 31, 2008<br>
     Будапешт, Вергрия<br>
     13 разработчиков<br>
-    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
-    проекта OpenBSD</a>.
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">
+    пожертвованиям проекту OpenBSD</a>.
 <tr>
 <td>
     <a id="c2k8" href="images/hackathons/c2k8.gif">
@@ -624,8 +624,8 @@ td {
     Май 5-10, 2008<br>
     Ито, Япония<br>
     18 разработчиков<br>
-    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
-    проекта OpenBSD</a> и помощи Mark Uemura.
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">
+    пожертвованиям проекту OpenBSD</a> и помощи Mark Uemura.
 <td>
     <a id="h2k7" href="images/hackathons/h2k7.gif">
     <img src="images/hackathons/h2k7-s.gif" alt="h2k7-s"></a><br>
@@ -633,8 +633,8 @@ td {
     Ноябрь 22 - 29, 2007<br>
     Коимбра, Португалия<br>
     11 разработчиков<br>
-    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
-    проекта OpenBSD</a>,
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">
+    пожертвованиям проекту OpenBSD</a>,
     а также при поддержке <a href="http://www.uc.pt">University of Coimbra</a>.
 <tr>
 <td>
@@ -644,8 +644,8 @@ td {
     Октябрь 22 - 28, 2007<br>
     Будапешт, Венгрия<br>
     13 разработчиков<br>
-    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
-    проекта OpenBSD</a>.
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">
+    пожертвованиям проекту OpenBSD</a>.
 <td>
     <a id="c2k7" href="images/hackathons/c2k7.gif">
     <img src="images/hackathons/c2k7-s.gif" alt="c2k7-s"></a><br>
@@ -653,8 +653,8 @@ td {
     Май 25 - Jun 2, 2007<br>
     Калгари, Альберта<br>
     50 разработчиков<br>
-    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
-    проекта OpenBSD</a>.
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">
+    пожертвованиям проекту OpenBSD</a>.
 <td>
     <a id="f2k7" href="images/hackathons/f2k7.gif">
     <img src="images/hackathons/f2k7-s.gif" alt="f2k7-s"></a><br>
@@ -662,8 +662,8 @@ td {
     Апрель 10 - 15, 2007<br>
     Венна, Австрия<br>
     14 разработчиков<br>
-    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
-    проекта OpenBSD</a>.
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">
+    пожертвованиям проекту OpenBSD</a>.
 <tr>
 <td>
     <a id="h2k6" href="images/hackathons/h2k6.gif">
@@ -672,8 +672,8 @@ td {
     Ноябрь 25 - 30, 2006<br>
     Коимбра, Португалия<br>
     14 разработчиков<br>
-    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
-    проекта OpenBSD</a>,
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">
+    пожертвованиям проекту OpenBSD</a>,
     а также при поддержке <a href="http://www.uc.pt">University of Coimbra</a>.
 <td>
     <a id="p2k6" href="images/hackathons/p2k6.gif">
@@ -682,8 +682,8 @@ td {
     Октябрь 18 - 22, 2006<br>
     Будапешт, Венгрия<br>
     14 разработчиков<br>
-    Огранизован <a href="https://www.openbsd.org/donations.html">при поддержке
-    проекта OpenBSD</a>.
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">
+    пожертвованиям проекту OpenBSD</a>.
 <td>
     <a id="k2k6" href="images/hackathons/k2k6.gif">
     <img src="images/hackathons/k2k6-s.gif" alt="k2k6-s"></a><br>
@@ -707,8 +707,8 @@ td {
     Май 21 - 29, 2006<br>
     Калгари, Альберта<br>
     47 разработчиков<br>
-    Организован <a href="https://www.openpbsd.org/donations.html">при поддержке
-    проекта OpenBSD</a>.
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">
+    пожертвованиям проекту OpenBSD</a>.
 <td>
     <a id="v2k5" href="images/hackathons/v2k5.gif">
     <img src="images/hackathons/v2k5-s.gif" alt="v2k5-s"></a><br>
@@ -716,8 +716,8 @@ td {
     Ноябрь 1 - 4, 2005<br>
     Сан-Серволо, Венеция, Италия<br>
     12 разработчиков<br>
-    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
-    проекта OpenBSD</a>.
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">
+    пожертвованиям проекту OpenBSD</a>.
 <tr>
 <td>
     <a id="c2k5" href="images/hackathons/c2k5.gif">
@@ -726,8 +726,8 @@ td {
     Май 21 - 28, 2005<br>
     Калгари, Альберта<br>
     60 разработчиков<br>
-    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
-    проекта OpenBSD</a>.
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">
+    пожертвованиям проекту OpenBSD</a>.
 <td>
     <a id="c2k4" href="images/hackathons/c2k4.gif">
     <img src="images/hackathons/c2k4-s.gif" alt="c2k4-s"></a><br>
@@ -735,8 +735,8 @@ td {
     Июнь 19 - 26, 2004<br>
     Калгари, Алберта<br>
     46 разработчика<br>
-    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
-    проекта OpenBSD</a>.
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">
+    пожертвованиям проекту OpenBSD</a>.
 <td>
     <a id="pf2k4" href="images/hackathons/pf2k4.gif">
     <img src="images/hackathons/pf2k4-s.gif" alt="pf2k4-s"></a><br>
@@ -786,8 +786,8 @@ td {
     Июнь 15 - 18, 2000<br>
     Калгари, Альберта<br>    
     18 разработчиков<br>
-    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
-    проекта OpenBSD</a>.
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">
+    пожертвованиям проекту OpenBSD</a>.
 <td>
     <a id="c99" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
