[1.155] fix broken link - crypto.html

--- a/crypto.html
+++ b/crypto.html
@@ -41,7 +41,7 @@ h3 {
 Поэтому, проект OpenBSD использует интегрированную криптографию во
 многих частях операционной системы. Необходимым условием использования
 криптографии в нашей системе является
-<a href="policy.html">доступность и свободная лицензия</a>.
+<a href="https://www.openbsd.org/policy.html">доступность и свободная лицензия</a>.
 Мы не используем запатентованные алгоритмы или технологии криптографии.
 Мы также следим, чтобы используемое ПО разрабатывалось в странах с
 пригодным для экспорта законодательством, т.к. не хотим нарушать
