[1.144] sync - hackathons.html

--- a/hackathons.html
+++ b/hackathons.html
@@ -96,7 +96,9 @@ td {
     Ноябрь 5 - 12, 2019<br>
     Бухарест, Румыния<br>
     18 разработчиков<br>
-    При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+    При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>,
+    и поддержке <a href="http://fmi.unibuc.ro">факультета математики и компьютерных наук
+    бухарестского университета</a>.
     <br>
 <td>
     <a id="g2k19" href="images/hackathons/g2k19.gif">
@@ -805,7 +807,7 @@ pf2k4, c2k4, and c2k5 созданы David Woloschuk.<br>
 n2k10 создана Theo de Raadt, усовершенствована Ty Semaka.<br>
 c2k10, j2k10, and p2k10 создана Damon Mlekuz.<br>
 k2k11 создана Bret Lambert.<br>
-r2k12, g2k12, n2k12, b2k13, n2k14, m2k14, g2k14, s2k15, c2k15, l2k15, p2k16, g2k16, b2k16, a2k17, d2k17, p2k17, s2k17, a2k18, p2k18, g2k18, a2k19, t2k19, g2k19, e2k19 создана Markus Hall.<br>
+r2k12, g2k12, n2k12, b2k13, n2k14, m2k14, g2k14, s2k15, c2k15, l2k15, p2k16, g2k16, b2k16, a2k17, d2k17, p2k17, s2k17, a2k18, p2k18, g2k18, a2k19, t2k19, g2k19, p2k19 создана Markus Hall.<br>
 p2k12 создана Bidon Mickael aka Mogmi.<br>
 c2k12 создана Theo de Raadt.<br>
 n2k13 купленная футболка с добавленной надписью.<br>
