[1.326] sync - faq/faq5.html

--- a/faq/faq5.html
+++ b/faq/faq5.html
@@ -118,9 +118,7 @@ OpenBSD использует систему контроля версий
 для работы с исходниками.
 Программа <a href="https://man.openbsd.org/cvs">cvs(1)</a>
 используется для загрузки исходников на вашу машину для дальнейшей
-компиляции. Вы также можете поддерживать свой собственный репозиторий
-при помощи <a href="../cvsync.html">CVSync</a> или программы rsync,
-доступной в виде <a href="faq15.html">пакета</a>.
+компиляции.
 Краткую информацию по программе, введение, можно найти в
 <a href="https://man.openbsd.org/cvs">cvs(1)</a>,
 а более детальная докуменация, включающая примеры работы с деревом
@@ -130,6 +128,12 @@ OpenBSD использует систему контроля версий
 команды <code>cvs checkout</code>. После этого, чтобы обновить уже
 существующие или дозагрузить новые файлы из того же репозитория, надо
 будет сделать <code>cvs update</code>.
+Вы так же можете настроить и поддерживать свой локальный CVS репозиторий
+при помощи программы <code>reposync</code>, доступной в виде
+<a href="faq15.html">пакета</a>.
+О настройке зеркала репозитория рассказывается на странице,
+посвященной <a href="../anoncvs.html#rsync">анонимному CVS</a>.
+
 
 <h4 id="wsrc">Избегайте Root привилегий</h4>
 
