[1.329] sync - faq/faq8.html

--- a/faq/faq8.html
+++ b/faq/faq8.html
@@ -82,12 +82,19 @@ boot> <b>boot -s</b>
 <a href="https://openbsd-ru.github.io/openntpd/index.html">OpenNTPD</a>
 это надежный и простой NTP-совместимый способ иметь точное время в системе.
 <a href="https://man.openbsd.org/ntpd">ntpd(8)</a> демон включается по умолчанию
-во время установки, в результате чего часы вашего компьютера медленно
-синхронизируются с серверами <a href="http://www.pool.ntp.org">pool.ntp.org</a>.
+во время установки.
+Во время загрузки, <code>ntpd</code> постарается установить часы, в зависимости
+от данных, которые он получит от NTP-узлов, найденных при помощи
+<a href="https://man.openbsd.org/ntpd.conf#CONSTRAINTS">constraints</a>
+по https.
+
 Как только часы будут точно настроенны, <code>ntpd</code> будет следить
-за тем, чтобы они не убежали. Однако, если ваши часы все равно отстают хотя бы
-на несколько минут, рекомедуется настроить их при помощи <code>-s</code>
-параметра.
+за тем, чтобы они не убежали, используя сервера, указанные в
+<a href="https://man.openbsd.org/ntpd.conf">ntpd.conf(5)</a>.
+Во время загрузки, <code>ntpd</code> корректирует настройки часов только
+в том случае, если они отстали (подгоняет их вперед). Если же ваши часы
+спешат, т.е. время на них нужно переместить назад, установите часы вручную,
+используя <a href="https://man.openbsd.org/date">date(1)</a>..
 
 <p>
 Для использования OpenNTPD в качестве сервера, добавьте строку
