[1.89] update link to macros.html - faq/pf/index.html

--- a/faq/pf/index.html
+++ b/faq/pf/index.html
@@ -44,7 +44,7 @@ PF: Пакетный фильтр OpenBSD
 <li>Основная настройка
 	<ul>
 	<li><a href="config.html">Начинаем работать с PF</a>
-	<li><a href="https://openbsd.org/faq/pf/macros.html">Списки и макросы</a>
+	<li><a href="macros.html">Списки и макросы</a>
 	<li><a href="https://openbsd.org/faq/pf/tables.html">Таблицы</a>
 	<li><a href="https://openbsd.org/faq/pf/filter.html">Фильтрация пакетов</a>
 	<li><a href="https://openbsd.org/faq/pf/nat.html">Преобразование сетевых адресов (NAT)</a>
