--- a/faq/index.html
+++ b/faq/index.html
@@ -203,7 +203,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li>Основная настройка
   <ul>
   <li><a href="pf/config.html"                                >Начинаем работать с PF</a>
-  <li><a href="https://www.openbsd.org/faq/pf/macros.html"    >Списки и Макросы</a>
+  <li><a href="pf/macros.html"                                >Списки и Макросы</a>
   <li><a href="https://www.openbsd.org/faq/pf/tables.html"    >Таблицы</a>
   <li><a href="https://www.openbsd.org/faq/pf/filter.html"    >Фильтрация пакетов</a>
   <li><a href="https://www.openbsd.org/faq/pf/nat.html"       >Преобразование сетевых адресов</a>
