[1.541] update link to tables.html - faq/index.html

--- a/faq/pf/index.html
+++ b/faq/pf/index.html
@@ -45,7 +45,7 @@ PF: Пакетный фильтр OpenBSD
 	<ul>
 	<li><a href="config.html">Начинаем работать с PF</a>
 	<li><a href="macros.html">Списки и макросы</a>
-	<li><a href="https://openbsd.org/faq/pf/tables.html">Таблицы</a>
+	<li><a href="tables.html">Таблицы</a>
 	<li><a href="https://openbsd.org/faq/pf/filter.html">Фильтрация пакетов</a>
 	<li><a href="https://openbsd.org/faq/pf/nat.html">Преобразование сетевых адресов (NAT)</a>
 	<li><a href="https://openbsd.org/faq/pf/rdr.html">Перенаправление трафика (проброс портов)</a>
