--- a/faq/faq5.html
+++ b/faq/faq5.html
@@ -361,7 +361,7 @@ swap /dest mfs rw,nosuid,noperm,-P/var/dest,-s1.5G,noauto 0 0
 
 <pre class="cmdbox">
 $ <b>cd /usr/src</b>
-$ <b>find . -type l -name obj | xargs rm</b>
+$ <b>find . -type l -name obj -delete</b>
 $ <b>make cleandir</b>
 $ <b>rm -rf /usr/obj/*</b>
 $ <b>make obj</b>
