[1.327] update link to current.html - faq/faq5.html

--- a/faq/faq5.html
+++ b/faq/faq5.html
@@ -72,7 +72,7 @@ snapshot.
 Этого можно добиться при помощи опции <code>-c</code> утилиты
 <a href="https://man.openbsd.org/susupgrade">sysupgrade(8)</a>.
 Проверьте страницу о
-<a href="current.html">последних -current и использования snapshots</a>,
+<a href="https://www.openbsd.org/faq/current.html">последних -current и использования snapshots</a>,
 чтобы ознакомиться с последними изменениями конфигурации или дополнительными
 шагами, необходимыми для сборки из исходников.
 
@@ -209,7 +209,8 @@ $ <b>cvs -q up -Pd -A</b>
 
 <p>
 Если вы собираете -current, просмотрите изменения, а также специальные
-инструкции по сборке, перечисленные на <a href="current.html">этой странице</a>.
+инструкции по сборке, перечисленные на
+<a href="https://www.openbsd.org/faq/current.html">этой странице</a>.
 
 <p>
 Следуйте детальным инструкциям, описанным в шагах 2 и 3 руководства по
@@ -348,7 +349,8 @@ swap /dest mfs rw,nosuid,noperm,-P/var/dest,-s1.5G,noauto 0 0
 <ul>
   <li>Не получается собрать или запустить <a href="#BldBinary">тот или иной бинарник</a>.
   <li><a href="#BldGetSrc">Загрузка</a> не того branch с исходниками.
-  <li>Забыли ознакомиться с <a href="current.html">докуменацией о -current</a>
+  <li>Забыли ознакомиться с
+      <a href="https://www.openbsd.org/faq/current.html">докуменацией о -current</a>
       до того как начать сборку.
   <li>Забили пререзагрузиться после сборки и установки нового ядра.
 </ul>
