[1.43] update link to current.html - faq/ports/testing.html

--- a/faq/ports/testing.html
+++ b/faq/ports/testing.html
@@ -57,7 +57,7 @@
 работать в других версиях (branches).
 Это значит, что вы должны обновить свою систему и дерево портов до -current.
 Инструкцию, где описывается как это сделать, можно найти на странице
-<a href="../current.html">посвященной current</a>.
+<a href="https://www.openbsd.org/faq/current.html">посвященной current</a>.
 Также рекомендуется подписаться на рассылки ports и ports-changes.
 Это поможет быть в курсе новых изменений в дереве портов и их обновлений.
 
